--- a/src/app/layout/footer/app.footer.component.html
+++ b/src/app/layout/footer/app.footer.component.html
@@ -9,11 +9,5 @@
         height="20"
         class="mr-2"
     />
-    <span>
-        hecho con<span class="font-medium ml-2">PrimeNG </span> por<span
-            class="font-medium ml-2"
-            >Arrascaeta Nahuel</span
-        >
-        | &copy; Casa Julian Arcoíris derechos reservados.
-    </span>
+    <span> &copy; Casa Julian Arcoíris derechos reservados. </span>
 </div>
