--- a/src/app/layout/topbar/app.topbar.component.html
+++ b/src/app/layout/topbar/app.topbar.component.html
@@ -1,4 +1,14 @@
 <div class="layout-topbar">
+    <div class="titleOfSys">
+        <button
+            #menubutton
+            class="p-link layout-menu-button layout-topbar-button"
+            (click)="layoutService.onMenuToggle()"
+        >
+            <i class="pi pi-bars"></i>
+        </button>
+    </div>
+
     <a class="layout-topbar-logo" routerLink="">
         <img
             src="assets/layout/images/{{
@@ -8,22 +18,6 @@
             }}.svg"
             alt="logo"
         />
-        <span>Panel administrativo Casa Julian Arcoíris</span>
+        <span>Casa Julian Arcoíris</span>
     </a>
-
-    <button
-        #menubutton
-        class="p-link layout-menu-button layout-topbar-button"
-        (click)="layoutService.onMenuToggle()"
-    >
-        <i class="pi pi-bars"></i>
-    </button>
-
-    <button
-        #topbarmenubutton
-        class="p-link layout-topbar-menu-button layout-topbar-button"
-        (click)="layoutService.showProfileSidebar()"
-    >
-        <i class="pi pi-ellipsis-v"></i>
-    </button>
 </div>
